fix z-index and cache for tomato

--- a/app/assets/stylesheets/application/components/overlapping-avatar.scss
+++ b/app/assets/stylesheets/application/components/overlapping-avatar.scss
@@ -10,6 +10,7 @@
     height: 56px;
     border-radius: var(--border-radius-circle);
     object-fit: cover;
+    flex-shrink: 0;
 
     &::before {
       content: '';
