--- a/app/assets/stylesheets/application/components/search/search-result.scss
+++ b/app/assets/stylesheets/application/components/search/search-result.scss
@@ -1,4 +1,5 @@
 .search-result {
+  position: relative;
   display: flex;
   align-items: center;
   gap: var(--spacing-md);
