--- a/app/assets/stylesheets/application/variables.scss
+++ b/app/assets/stylesheets/application/variables.scss
@@ -89,7 +89,8 @@ $icons: 'arrow-down', 'arrow-up', 'arrows-expand', 'bookmark-fill', 'bookmark', 
     --z-video-card-image: 0;
     --z-tomato: 1;
     --z-performance-number: 1;
-    --z-video-overlay: 100;
+    --z-video-overlay: 1;
+    --z-search-window: 2;
     --z-navbar-1: 200;
     --z-navbar-2: 300;
     --z-navbar-3: 400;
@@ -106,7 +107,6 @@ $icons: 'arrow-down', 'arrow-up', 'arrows-expand', 'bookmark-fill', 'bookmark', 
     --z-search: 1500;
     --z-tooltip: 1600;
     --z-cookies-modal: 1700;
-    --z-search-window: 1900;
     --z-drawer: 2000;
     --z-cookies: 2100;
 
